This file shows the changes in this release of xPDO.

xPDO 3.0.0 (TBD)
====================================
- Add option to restrict extraction of files by extension to xPDOZip
- Fix invalid datetime value being used when formatting with regex
- Fix xPDOFileCache->delete() when a directory with same cache key exists
- Improve PSR-4 support by allowing namespace prefixes to be removed from package name
- Fix PHP 7.4 deprecation warnings for array and string offset access with curly braces
- Add xPDO->getAlias() method to get a class name without the namespace
- Quote default column values for MySQL
- Add JSON extension as composer dependency
- Add PostgreSQL support via the pgsql PDO driver
- Refactor xPDOObject->remove() to use key=>value for primary key criteria
- Add missing return statement to xPDOMaxLengthValidationRule
- Fix xPDOIterator failure when fetch returns null due to object hydration
- Improve PSR-4 support by introducing namespace prefixes to model metadata
- Introduce PSR-11 support to replace deprecated container-interop support
- Make json and array phptypes quotable in xPDOQuery
- Replace usages of each with foreach to avoid PHP 7.2 deprecated warnings
- Fix "reference expected" warnings in PHP 7.1
- Introduce xPDOContainer providing container-interop implementation
- Add xPDO\Cache\xPDORedisCache implementation
- Adopt symfony\console 2.x for CLI scripts
- Add phpdoc @property to classes for each field
- Add option to respect PSR-4 namespaces
- Refactor for 5.3+ in the \xPDO namespace

xPDO 2.5.3-pl (Jaunary 3, 2017)
====================================
- Make sure xPDOQuery base class is always loaded

xPDO 2.5.2-pl (December 16, 2016)
====================================
- Sanitize and prevent SQLi in getObject calls expecting PK values
- Make isValidClause a public static method in xPDOQuery
- Allow empty sort direction
- Revert getCriteria change to force scalar params to be PK values
- Make xPDOQuery::isValidClause a public method